--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,21 @@
 body {
-  background-color: darkgrey;
+  
+}
+
+.bg-image {
+  background-attachment: fixed;
+  background-image: url(https://cos.northeastern.edu/wp-content/uploads/2017/10/Physics-cosmic-paper-trails-1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+h1 {
+  font-size: 36px;
+}
+
+h2 {
+  font-size: 28px;
 }
 
 img {
@@ -9,17 +25,19 @@ img {
 }
 
 .intro {
-  color: blue;
+  color: rgb(89, 206, 171);
   display: block;
   margin: auto;
   width: 80%;
 }
+
 .span {
   color: red ;
 }
 
 p {
-  border: 4px solid darkolivegreen;
+  background: rgba(128, 128, 128, 0.685);
+  border: 4px solid rgb(68, 47, 107);
   box-sizing: border-box;
   font-size: 24px;
   padding: 5px;
@@ -33,5 +51,5 @@ p {
 }
 
 .title h1 {
-  color: black;
+  color: rgb(0, 0, 0);
 }
