--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,12 @@ img {
   margin: auto;
   width: 80%;
 }
-
+.introdark{
+  color: rgb(89, 206, 171);
+  display: block;
+  margin: auto;
+  width: 80%;
+}
 .sidebar {
   background-color: rgba(128, 128, 128, 0.685);
   border: 4px solid rgb(68, 47, 107);
@@ -73,10 +78,12 @@ p {
 .title h1 {
   color: rgb(0, 0, 0);
 }
-#light {
+.light {
+  color: rgb(0, 0, 0);
   background-color: rgb(223, 183, 241);
 }
 
-#dark {
+.dark {
+  color: aliceblue;
   background-color: rgb(59, 3, 65);
 }
